<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PasswordFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_triangle_copy_94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="170dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/confirmPass"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:ems="4"
        android:inputType="numberPassword"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/pin_code_button_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_circle_blue"
        android:text="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/pin_code_button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/pin_code_button_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_2_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_1"
        app:layout_constraintEnd_toStartOf="@+id/pin_code_button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_1"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_1" />

    <Button
        android:id="@+id/pin_code_button_3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_3_n"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_2"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_1" />

    <Button
        android:id="@+id/pin_code_button_4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_4_n"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/pin_code_button_7"
        app:layout_constraintEnd_toStartOf="@+id/pin_code_button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_button_1" />

    <Button
        android:id="@+id/pin_code_button_5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_5_n"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_4"
        app:layout_constraintEnd_toStartOf="@+id/pin_code_button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_1"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_4" />

    <Button
        android:id="@+id/pin_code_button_6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_6_n"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_5"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_4" />

    <Button
        android:id="@+id/pin_code_button_7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_7_n"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/pin_code_button_0"
        app:layout_constraintEnd_toStartOf="@+id/pin_code_button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_button_4" />

    <Button
        android:id="@+id/pin_code_button_8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_8_n"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_7"
        app:layout_constraintEnd_toStartOf="@+id/pin_code_button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_4"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_7" />

    <Button
        android:id="@+id/pin_code_button_9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="@string/_9_n"
        android:textSize="14sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_8"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_7" />

    <Button
        android:id="@+id/pin_code_button_0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/shape_circle_blue"
        android:text="0"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/pin_code_button_8"
        app:layout_constraintStart_toStartOf="@+id/pin_code_button_8"
        app:layout_constraintTop_toBottomOf="@+id/pin_code_button_8" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="35dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/ic_outline_backspace_24"
        app:layout_constraintBottom_toBottomOf="@+id/pin_code_button_0"
        app:layout_constraintStart_toEndOf="@+id/pin_code_button_0"
        app:layout_constraintTop_toTopOf="@+id/pin_code_button_0"
        app:tint="@android:color/white" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_triangle_copy_93"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>